# src/lib/api/types.ts
@@ -1,4 +1,5 @@
 import type { components } from './memoria.v1';
+import type { components as portusComponents } from './portus.v1';
 
 export type UserResponse = components['schemas']['models.UserResponse'];
 
@@ -13,3 +14,10 @@ export type UpdatePasteRequest = components['schemas']['models.UpdatePasteReques
 export type PasteResponse = components['schemas']['models.APIResponse-models_PasteData'];
 export type PasteListResponse = components['schemas']['models.APIResponse-models_PasteListData'];
 export type PasteDeleteResponse = components['schemas']['models.APIResponse-uint64'];
+
+export type Shorten = portusComponents['schemas']['models.Shorten'];
+
+export type ShortenResponse = portusComponents['schemas']['models.APIResponse-models_ShortenData'];
+export type ShortenData = portusComponents['schemas']['models.ShortenData'];
+export type ShortenErrorResponse = portusComponents['schemas']['models.ErrorResponse'];
+export type CreateShortenRequest = portusComponents['schemas']['models.ShortenRequest'];
